Fix HTML formatting and remove unnecessary lines

--- a/index.html
+++ b/index.html
@@ -218,8 +218,7 @@
                     </div>
                 </div>
 
-                <button class="btn-calc" id="quotationBtn"
-                    style="background: var(--brand-accent); color: white;">Calculate Quotation</button>
+                <button class="btn-calc" id="quotationBtn">Calculate Quotation</button>
 
                 <div id="quotationResults" class="results-box">
                     <h3>Quotation Details</h3>
